<resources>
    <string name="app_name">Kotlin Guide Offline</string>
    <string name="splash_text">Splash Text</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="kotlin_guide">Kotlin Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="getting_started">GETTING STARTED</string>
    <string name="basic_syntax">Basic Syntax</string>
    <string name="idioms">Idioms</string>
    <string name="coding_conventions">Coding Conventions</string>

    <string name="basics">BASICS</string>
    <string name="basic_types">Basic Types</string>
    <string name="packages">Packages</string>
    <string name="control_flow">Control Flow</string>
    <string name="returns_and_jumps">Returns and Jumps</string>

    <string name="classes_and_objects">CLASSES AND OBJECTS</string>
    <string name="classes_and_inheritance">Classes and Inheritance</string>
    <string name="properties_and_fields">Properties and Fields</string>
    <string name="interfaces">Interfaces</string>
    <string name="visibility_modifiers">Visibility Modifiers</string>
    <string name="extensions">Extensions</string>
    <string name="data_classes">Data Classes</string>
    <string name="sealed_classes">Sealed Classes</string>
    <string name="generics">Generics</string>
    <string name="nested_classes">Nested Classes</string>
    <string name="enum_classes">Enum Classes</string>
    <string name="objects">Objects</string>
    <string name="delegation">Delegation</string>
    <string name="delegated_properties">Delegated Properties</string>
    
    <string name="functions_and_lambdas">FUNCTION AND LAMBDAS</string>
    <string name="functions">Functions</string>
    <string name="lambdas">Lambdas</string>
    <string name="inline_functions">Inline Functions</string>
    <string name="coroutines">Coroutines</string>
    
    <string name="other">OTHER</string>
    <string name="destructuring_declarations">Destructuring Declarations</string>
    <string name="collections">Collections</string>
    <string name="ranges">Ranges</string>
    <string name="type_checks_and_casts">Type Checks and Casts</string>
    <string name="this_expressions">This Expressions</string>
    <string name="equality">Equality</string>
    <string name="operator_overloading">Operator Overloading</string>
    <string name="null_safety">Null Safety</string>
    <string name="exceptions">Exceptions</string>
    <string name="annotations">Annotations</string>
    <string name="reflection">Reflection</string>
    <string name="type_safe_builders">Type-Safe Builders</string>
    <string name="type_aliases">Type Aliases</string>
</resources>
